--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -17,6 +17,7 @@ time, mark, audio, video {
 	font-size: 62.5%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: Arial,"Microsoft Yahei","Helvetica Neue",Helvetica,sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
